JEAP-6062: Remove webflux test dependencies